# jsav

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  AI_GUIDELINES.md  CMakeLists.txt  CONTRIBUTING.md  Claude.md  Constructor_creation_prompt.md  Dependencies.cmake  Error_fixer_prompt.md  HUMAN_GUIDELINES.md  ProjectOptions.cmake  QWEN.md  README.md  Tests_creator_prompt.md  build_and_callgrind.sh  build_and_run.sh  build_and_test_coverage.sh  build_and_valgrind.sh  cleanHtlmAndCss.sh  gcovr.cfg  make_scripts_executable.sh  prompt_improver.md
.Claude/: settings.json  statusline-windows11.sh  statusline.sh
.Claude/commands/: speckit.plan.md  speckit.specify.md
.github/: codecov.yml  constants.env  dependabot.yml
.github/actions/setup_cache/: action.yml
.github/agents/: speckit.analyze.agent.md  speckit.plan.agent.md  speckit.tasks.agent.md
.github/codeql/: codeql-config.yml
.github/workflows/: auto-clang-format.yml  ci.yml  codeql-analysis.yml
.qwen/: settings.json
.qwen/commands/: speckit.analyze.md  speckit.clarify.md  speckit.constitution.md  speckit.implement.md  speckit.plan.md  speckit.specify.md  speckit.tasks.md
.specify/memory/: constitution.md
cmake/: CPM.cmake  Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Emscripten.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  Simd.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  Tests.cmake  VCEnvironment.cmake
configured_files/: CMakeLists.txt  config.hpp.in
fuzz_test/: CMakeLists.txt  fuzz_tester.cpp
include/jsav/: headers.hpp  jsav.hpp  sample_library.hpp
include/jsav/fs/: FSConstats.hpp  FileCreationResult.hpp  FileDeletionResult.hpp  FolderCreationResult.hpp  FolderDeletionResult.hpp  FolderDelitionResult.hpp  OSOperationResult.hpp  fs.hpp
include/jsav/lexer/: Lexer.hpp  SourceLocation.hpp  SourceSpan.hpp  Token.hpp
include/jsav/lexer/unicode/: UnicodeData.hpp  Utf8.hpp
include/jsavCore/: FileReader.hpp  FileReaderError.hpp  Log.hpp  disableWarn.hpp  format.hpp  headersCore.hpp  jsavCore.hpp  move.hpp
include/jsavCore/cast/: BaseCast.hpp  BitCast.hpp  NarrowCast.hpp  TypeSizes.hpp
include/jsavCore/timer/: Timer.hpp  TimerConstats.hpp  Times.hpp  timeFactors.hpp
scripts/: generate_unicode_tables.py
specs/001-cmake-utf8-support/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-cmake-utf8-support/checklists/: requirements.md
specs/001-cmake-utf8-support/contracts/: cmake-api.md  runtime-header-api.md
specs/001-lexer-utf8-support/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-lexer-utf8-support/checklists/: requirements.md
specs/001-lexer-utf8-support/contracts/: unicode-api.md
specs/001-utf8-unicode-lexer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-utf8-unicode-lexer/checklists/: requirements.md
specs/001-utf8-unicode-lexer/contracts/: lexer-interface.md
specs/002-utf8-unicode-whitespace/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-utf8-unicode-whitespace/checklists/: requirements.md
specs/002-utf8-unicode-whitespace/contracts/: lexer-whitespace.md  unicode-line-terminator.md
specs/003-numeric-literal-lexer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-numeric-literal-lexer/checklists/: requirements.md
specs/003-numeric-literal-lexer/contracts/: numeric-token-contract.md
specs/004-ascii-keyword-validation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-ascii-keyword-validation/checklists/: requirements.md
specs/004-ascii-keyword-validation/contracts/: lexer-keyword-tokenization.md
src/: CMakeLists.txt
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/jsav/: CMakeLists.txt  Costanti.hpp  main.cpp
src/jsav_Core_lib/: CMakeLists.txt  jsavCore.cpp
src/jsav_Lib/: CMakeLists.txt  jsav.cpp
src/jsav_Lib/lexer/: Lexer.cpp  SourceLocation.cpp  SourceSpan.cpp  Token.cpp
src/sample_library/: CMakeLists.txt  sample_library.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp  testsConstanst.hpp
vn_files/: input.vn
